<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.nirhart.parallaxscroll.views.ParallaxScrollView xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:parallax_factor="1.9"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_recipe"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:gravity="center"
                android:src="@drawable/recipe_default"
                android:background="@drawable/item_background"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@android:color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_recipe_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:text="@string/recipe_name" />

                <TextView
                    android:id="@+id/txt_recipe_prepare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_prepare" />

                <TextView
                    android:id="@+id/txt_recipe_cook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_cook" />

                <TextView
                    android:id="@+id/txt_recipe_serves"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_serves" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/flatui_asbestos" />

                <TextView
                    android:id="@+id/txt_title_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/summary" />

                <TextView
                    android:id="@+id/txt_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/summary_text" />

                <TextView
                    android:id="@+id/txt_title_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/ingredients" />

                <TextView
                    android:id="@+id/txt_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients_text" />

                <TextView
                    android:id="@+id/txt_title_directions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/directions" />

                <TextView
                    android:id="@+id/txt_directions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/directions_text" />
            </LinearLayout>

        </LinearLayout>

    </com.nirhart.parallaxscroll.views.ParallaxScrollView>

    <com.shamanland.fab.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/fab_share_recipe"
        android:src="@drawable/ic_social_share"
        app:floatingActionButtonColor="@drawable/fab_color"
        app:floatingActionButtonSize="normal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp" />
</RelativeLayout>