<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:foreground="?android:attr/selectableItemBackground"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    card_view:cardCornerRadius="2dp"
    android:layout_margin="5dp"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_recipe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:scaleType="centerCrop"
            android:src="@drawable/recipe_default" />

        <LinearLayout
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:id="@+id/txt_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:lines="3"
                android:maxLines="3"
                android:text="@string/recipe_name" />

            <TextView
                android:id="@+id/txt_recipe_serves"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_margin="5dp"
                android:text="@string/recipe_serves" />

            <TextView
                android:id="@+id/txt_recipe_cook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_margin="5dp"
                android:text="@string/recipe_cook" />
        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>
