<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp">

    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_gravity="center_horizontal|top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardElevation="2dp"
            card_view:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_recipe"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:scaleType="centerCrop"
                    android:src="@drawable/recipe_default" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_recipe_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:lines="2"
                        android:maxLines="2"
                        android:text="@string/recipe_name" />

                    <TextView
                        android:id="@+id/txt_recipe_serves"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:layout_margin="2dp"
                        android:text="@string/recipe_serves" />

                    <TextView
                        android:id="@+id/txt_recipe_cook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:layout_margin="2dp"
                        android:text="@string/recipe_cook" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </FrameLayout>

</FrameLayout>